# gmsl-picam

./: .dockerignore  .gitignore  .gitmodules
docker/: kernel-pack.Dockerfile  libcamera-arm64.Dockerfile  rust-arm64.Dockerfile
docs/: README.md  gmsl-camera-operations.md  pi5-ubuntu-imx477-repeatable-steps.md  ubuntu-arm64-cross-build.md
kernel/: README.md
kernel/modules/: README.md
kernel/overlays/: README.md
rust/: Cargo.toml  README.md
rust/examples/: gstreamer_capture.rs  libcamera_capture.rs
rust/src/: lib.rs
scripts/: build-kernel-pack.sh  build-libcamera-arm64.sh  build-rust-arm64.sh  install-kernel-pack.sh  package-running-kernel-tree.sh
scripts/internal/: build-kernel-pack-inside.sh
toolchains/: libcamera-aarch64-cross.ini
